syntax = "proto3";

package auth;

service AuthService {
  rpc GetCurrentUserByJwt (GetCurrentUserByTokenRequest) returns (GetCurrentUserByTokenResponse);
  rpc GetParticipantsByAuthIds (GetParticipantsByAuthIdsRequest) returns (GetParticipantsByAuthIdsResponse);
}

message GetCurrentUserByTokenRequest {
  string token = 1;
  optional string deviceInfo = 2;
}

message GetCurrentUserByTokenResponse {
  optional AuthPayload payload = 1;
}

message AuthPayload {
  string id = 1;
  string username = 2;
  string email = 3;
  float iat = 4;
}


message GetParticipantsByAuthIdsRequest {
  repeated string authIds = 1;
}

message GetParticipantsByAuthIdsResponse {
  repeated Participant participants = 1;
}

message Participant {
  string authId = 1;
  string username = 2;
}
